--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.2.4",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "ngx-json-viewer": "^3.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
