--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "~11.2.4",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "highlight.js": "^10.7.2",
+    "ngx-highlightjs": "^4.1.3",
     "ngx-json-viewer": "^3.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -32,6 +34,7 @@
     "@angular-devkit/build-angular": "~0.1102.3",
     "@angular/cli": "~11.2.3",
     "@angular/compiler-cli": "~11.2.4",
+    "@types/highlight.js": "^10.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
