--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "highlight.js": "^10.7.2",
     "ngx-highlightjs": "^4.1.3",
     "ngx-json-viewer": "^3.0.2",
+    "ngxa": "^1.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
