--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.2.4",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "angular-cli-ghpages": "^1.0.0",
     "highlight.js": "^10.7.2",
     "ngx-highlightjs": "^4.1.3",
     "ngx-json-viewer": "^3.0.2",
